--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <header>
 	<nav class="positioner">
-		<a href="/index/"><div class="logo" id="mobile-nav-logo"></div></a>
-	
+		<a href="/index.html/"><div class="logo" id="mobile-nav-logo"></div></a>
+
 		<input type="checkbox" class="nav-check" id="nav-check">
 		<!-- This is the button we’d click to open/close the navigation  -->
 		<label class="nav-label" for="nav-check">
@@ -28,7 +28,7 @@
 				<a class="nav-item" href="#">Company</a>
 				<ul>
 					<li><span class="tiny-line"></span></li>
-					<li class="level-2"><a href="/about-us/">About Us</a></li>
+					<li class="level-2"><a href="/about-us.html/">About Us</a></li>
 					<li class="level-2"><a href="#">Careers</a></li>
 					<li class="level-2"><a href="#">Client Portal</a></li>
 				</ul>
@@ -55,7 +55,7 @@
 				</ul>
 			</li>
 			<li class="level-1">
-				<a class="contact-nav" id="contact" href="#">Contact</a>	
+				<a class="contact-nav" id="contact" href="#">Contact</a>
 					<ul>
 						<div class="contact-bg">
 
@@ -72,19 +72,19 @@
 									<div class="col-4 flex-2 flex--center">
 										<a class="contact-btn flex flex--center">solutions@triaset.com</a>
 									</div>
-									<div class="col-4 flex-2 flex--center">	
+									<div class="col-4 flex-2 flex--center">
 										<a class="contact-btn flex flex--center">(+6) 03 7880 9562</a>
 									</div>
-									<div class="col-4 flex-2 flex--center">	
+									<div class="col-4 flex-2 flex--center">
 										<a class="contact-btn">View our locations</a>
 									</div>
-									
+
 								</div>
-							</div>	
+							</div>
 						</div>
 
-					</ul>	
-			</li>	
+					</ul>
+			</li>
 		</ul>
 
 	</nav>
@@ -112,19 +112,19 @@
 
 
 <section class="who-we-are">
-	
+
 		<div class="aside">
 			<aside>Who we are<div class="tiny-line"></div></aside>
 		</div>
 
-	<div class="flex flex--center">	
+	<div class="flex flex--center">
 		<div class="text-wrapper flex--center">
 			<h3 class="at-small-center">
 				Harmonizing Knowledge with Software Solution
 
 			</h3>
 			<p class="at-small-center">
-				TriAset delivers high performance software solutions that increase the productivity, seamless interactivity and effectiveness of Treasury, Risk and Investment in both Conventional and Islamic financial instruments. With more than 15 years of specialization, we are experts in bringing complex and intertwine processes and information into simple yet exceptional user experience solutions. 
+				TriAset delivers high performance software solutions that increase the productivity, seamless interactivity and effectiveness of Treasury, Risk and Investment in both Conventional and Islamic financial instruments. With more than 15 years of specialization, we are experts in bringing complex and intertwine processes and information into simple yet exceptional user experience solutions.
 
 			</p>
 			<button class="center-text at-small-center-btn">Learn More</button>
@@ -140,7 +140,7 @@
 		<aside>What we do<div class="tiny-line"></div></aside>
 	</div>
 
-	<div class="flex flex--center">	
+	<div class="flex flex--center">
 		<div class="text-wrapper">
 			<h3 class="center-text">
 				We Are Proud Of Our Solutions
@@ -153,21 +153,21 @@
 	 	<div class="bank-img col-3 flex--h-center flex--center">
 			<div class="col-1 flex flex--center">
 				<h2 class="product-text flex--h-center">Bank Treasury</h2>
-			</div>	
+			</div>
 		</div>
 		<div class="corporate-img col-3 flex--h-center flex--center">
 			<div class="col-1 flex--h-center flex--center">
 				<h2 class="product-text flex--h-center">Corporate Treasury</h2>
-			
+
 			</div>
-		</div>	
+		</div>
 		<div class="investment-img col-3 product flex--h-center flex--center">
 			<div class="col-1 flex flex--center">
 				<h2 class=" product-text flex--h-center">Investment Management</h2>
-			
+
 			</div>
 		</div>
-		
+
 	</div>
 </section>
 
@@ -175,14 +175,14 @@
 
 
 
-	
+
 <section class="who-we-help">
-	
+
 		<div class="aside">
 			<aside>Who we help<div class="tiny-line"></div></aside>
 		</div>
 
-	<div class="flex flex--center">	
+	<div class="flex flex--center">
 		<div class="text-wrapper flex--center">
 			<h3 class="at-small-center">
 				We provide solutions to help banks, corporates, and financial institutions to manage their fund, risk and investment.
@@ -190,7 +190,7 @@
 			</h3>
 			<p class="at-small-center">
 				We have the solution and knowledge to help organization that is involved in financial instruments for financing, funding, investment, proprietary trading or hedging. Optimizing one profitability requires the support of efficient system that in turn supported by knowledgeable and committed personnel.<br>
-				Our clients include Banks, Pension Funds, Insurance Companies and Corporates dealing in Conventional and Islamic financial instruments. 
+				Our clients include Banks, Pension Funds, Insurance Companies and Corporates dealing in Conventional and Islamic financial instruments.
 				Bank Treasury solution is offered to Banks while Corporate will have Corporate Treasury solution. For Pension Funds and Insurance Companies we provide our Investment solution.
 			</p>
 			<br>
@@ -202,28 +202,28 @@
 </section>
 
 <section class="awards">
-	
+
 		<div class="aside">
 			<aside>Awards & Recognitions<div class="tiny-line"></div></aside>
 		</div>
 
-		<div class="flex flex--center">	
+		<div class="flex flex--center">
 			<div class="text-wrapper flex--center">
 				<h3 class="center-text">Well-respected and recognized for being the more innovative solution provider</h3>
 			</div>
 		</div>
-		
-		
-		<div class="flex flex--center">	
+
+
+		<div class="flex flex--center">
 			<div class="flex flex--space-around">
 				<div class="col-1">
 					<div class="bg-award" id="deloitte"></div>
-				</div>			
+				</div>
 				<div class="col-1">
 					<div class="bg-award" id="apicta"></div>
 				</div>
-		
-				
+
+
 				<div class="col-1">
 					<div class="bg-award" id="common-criteria"></div>
 				</div>
@@ -252,13 +252,13 @@
 			<div class="col-4 flex-2">
 				<a class="contact-btn flex flex--center">solutions@triaset.com</a>
 			</div>
-			<div class="col-4 flex-2">	
+			<div class="col-4 flex-2">
 				<a class="contact-btn flex flex--center">(+6) 03 7880 9562</a>
 			</div>
-			<div class="col-4 flex-2">	
+			<div class="col-4 flex-2">
 				<a class="contact-btn">View our locations</a>
 			</div>
-		
+
 		</div>
 
 	</div>
@@ -267,20 +267,20 @@
 
 		<div class="copyright">
 			<p id="copyright">© 2011 TRIASET.COM ALL RIGHTS RESERVED</p>
-		</div>	
+		</div>
 
-</footer>	
+</footer>
 	<!-- <div class="container positioner">
 
 		<div class="company">
 			<ul class="footer-items">
-			
+
 				<li><h5 class="category"> Company</h5></li>
 				<li><a href="#">About us</a></li>
 				<li><a href="#">Client Login</a></li>
 				<li><a href="#">Careers</a></li>
 			</ul>
-		</div>	
+		</div>
 
 		<div class="solutions">
 			<ul class="footer-items">
@@ -288,7 +288,7 @@
 				<li><a href="#">Bank Treasury</a></li>
 				<li><a href="#">Corporate Treasury</a></li>
 				<li><a href="#">Investment Management</a></li>
-			</ul>		
+			</ul>
 		</div>
 
 
@@ -303,7 +303,7 @@
 			Email: solutions@triaset.com</p>
 		</div>
 
-	</div> -->	
+	</div> -->
 
 
 
